works for speciations, draws rectangles for chromosome types, counts crossings